fix: prevent search result text from overflowing container

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,3 +108,7 @@ audio {
 table.statistics a {
   color: $gray-4;
 }
+
+.min-w-0 {
+  min-width: 0;
+}
